--- a/.github/workflows/full-scan.yml
+++ b/.github/workflows/full-scan.yml
@@ -11,4 +11,5 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.1.0
         with:
+          docker_name: 'owasp/zap2docker-stable'
           target: 'https://www.zaproxy.org/'
