--- a/.github/workflows/full-scan.yml
+++ b/.github/workflows/full-scan.yml
@@ -11,5 +11,8 @@ jobs:
       - name: ZAP Scan
         uses: zaproxy/action-full-scan@v0.1.0
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'owasp/zap2docker-stable'
           target: 'https://www.zaproxy.org/'
+          rules_file_name: '.zap/rules.tsv'
+          cmd_options: '-a'
