--- a/.github/workflows/zap-full.yml
+++ b/.github/workflows/zap-full.yml
@@ -14,6 +14,6 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           docker_name: 'owasp/zap2docker-stable'
-          target: 'https://www.zaproxy.org/'
+          target: 'https://www.securecodebox.io/'
           rules_file_name: '.zap-full-scan/rules.tsv'
           cmd_options: '-a'
