--- a/.github/workflows/zap-full.yml
+++ b/.github/workflows/zap-full.yml
@@ -1,19 +1,14 @@
-on: [push]
+on:
+  schedule:
+    # Runs every day At 01:00.
+    - cron:  '0 1 * * *'
 
 jobs:
   zap_scan:
     runs-on: ubuntu-latest
-    name: Scan the web application
+    name: Scan ZAP website
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.1.0
         with:
-          ref: main
-      - name: ZAP full Scan
-        uses: zaproxy/action-full-scan@v0.4.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'owasp/zap2docker-stable'
-          target: 'https://www.securecodebox.io/'
-          rules_file_name: '.zap-full-scan/rules.tsv'
-          cmd_options: '-a'
+          target: 'https://www.zaproxy.org/'
